[gd_scene load_steps=28 format=3 uid="uid://qn864xktqajq"]

[ext_resource type="Texture2D" uid="uid://bcpwgdkguiqq8" path="res://Art/GUI details/ScenesButton.png" id="1_vaitn"]
[ext_resource type="Texture2D" uid="uid://gnwws4kfntwc" path="res://Art/GUI details/backgrounds decal.png" id="2_l2i4w"]
[ext_resource type="Script" path="res://Scripts/PickableButtonController.gd" id="2_upp6h"]
[ext_resource type="Texture2D" uid="uid://d0hw4426mlyvb" path="res://Art/Characters/albert einstein.png" id="3_211by"]
[ext_resource type="Texture2D" uid="uid://dohbhfyowycf6" path="res://Art/Characters/isaac newton.png" id="4_4q8rt"]
[ext_resource type="Texture2D" uid="uid://ba2ly4ol22ixs" path="res://Art/GUI details/fadeInnOut.png" id="4_v62fk"]
[ext_resource type="Texture2D" uid="uid://dybnnllexoq5w" path="res://Art/Backgrounds/stage.png" id="5_f8olp"]
[ext_resource type="Texture2D" uid="uid://dhbaj8f0em7hd" path="res://Art/GUI details/startButton.png" id="5_msxm0"]
[ext_resource type="Texture2D" uid="uid://dpishw1wj7r1d" path="res://Art/GUI details/Manual.png" id="5_vem3l"]
[ext_resource type="Texture2D" uid="uid://c81eb05qb8lar" path="res://Art/Backgrounds/Guibackground.png" id="6_hni6r"]
[ext_resource type="Texture2D" uid="uid://bes234e2r7mek" path="res://Art/GUI details/characterAdder.png" id="6_pef5q"]
[ext_resource type="Texture2D" uid="uid://c01la576ko4kl" path="res://Art/GUI details/AssetPicker.png" id="7_4ex03"]
[ext_resource type="Texture2D" uid="uid://dxocpotgysd06" path="res://Art/Assets/table.png" id="7_gu7qr"]
[ext_resource type="Texture2D" uid="uid://o5vf1jry5cia" path="res://Art/Characters/william shakespeare.png" id="9_2jysb"]
[ext_resource type="Texture2D" uid="uid://calwapxpp2fs0" path="res://Art/Assets/painting.png" id="9_kkuf1"]
[ext_resource type="Texture2D" uid="uid://c1wi2dbeppph6" path="res://Art/Assets/painting2.png" id="10_n8xoa"]
[ext_resource type="Texture2D" uid="uid://dvlufmcplyg4s" path="res://Art/GUI details/kill.png" id="10_nyiqv"]
[ext_resource type="Texture2D" uid="uid://o65fmpuegl8j" path="res://Art/Characters/MihaiEminescuRight.png" id="13_aq31n"]
[ext_resource type="Texture2D" uid="uid://bsqvb6p4uqpb6" path="res://Art/Assets/apple.png" id="13_f7crs"]
[ext_resource type="Texture2D" uid="uid://dxfsx2wk26w6x" path="res://Art/Characters/BenjaminFranklinRight.png" id="14_wsc0m"]
[ext_resource type="Texture2D" uid="uid://buc0qmmjeyl3t" path="res://Art/Characters/Ion CreangaLeft.png" id="17_golnr"]
[ext_resource type="Texture2D" uid="uid://c2g4083r25hk5" path="res://Art/Characters/Ion GhicaLeft.png" id="18_78i83"]
[ext_resource type="Texture2D" uid="uid://b4ppfquvmseev" path="res://Art/Characters/neil armstrongLeft.png" id="19_trrm7"]
[ext_resource type="Texture2D" uid="uid://c8h4717lqdc3v" path="res://Art/GUI details/ScenesAdderButton.png" id="20_5kmlp"]
[ext_resource type="Texture2D" uid="uid://buqy8s7llj5j" path="res://Art/Characters/WiseJapaneseManRight.png" id="22_q1t0v"]
[ext_resource type="Texture2D" uid="uid://gfwamjie1ujc" path="res://Art/GUI details/exitButton.png" id="25_ssbba"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_d5ffx"]
normal = Vector2(-0.00172117, -0.999999)
distance = -45.4113

[node name="Main" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="FadeInnOut" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0)
z_index = 50
texture = ExtResource("4_v62fk")

[node name="BackgroundElements" type="Node2D" parent="."]
z_index = -1

[node name="GUI" type="Node2D" parent="BackgroundElements"]

[node name="ScenesDecal" type="Sprite2D" parent="BackgroundElements/GUI"]
position = Vector2(0, 428.12)
texture = ExtResource("1_vaitn")

[node name="BackgroundsDecal" type="Sprite2D" parent="BackgroundElements/GUI"]
texture_filter = 1
texture_repeat = 1
position = Vector2(704, -306)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_l2i4w")

[node name="Guibackground" type="Sprite2D" parent="BackgroundElements/GUI"]
z_index = -1
texture_filter = 1
texture = ExtResource("6_hni6r")

[node name="Manual" type="Sprite2D" parent="BackgroundElements/GUI"]
position = Vector2(-798, 432)
scale = Vector2(1, 1.09645)
texture = ExtResource("5_vem3l")

[node name="PickableButtonController" type="Node2D" parent="BackgroundElements"]
z_index = 1
script = ExtResource("2_upp6h")

[node name="KILLSWITCH" type="TextureButton" parent="BackgroundElements/PickableButtonController"]
offset_left = -340.0
offset_top = 364.0
offset_right = -140.0
offset_bottom = 492.0
texture_normal = ExtResource("10_nyiqv")

[node name="CharacterDescription" type="RichTextLabel" parent="BackgroundElements/PickableButtonController"]
offset_left = 611.0
offset_top = 89.0
offset_right = 930.0
offset_bottom = 520.0
text = "Einstein a fost..."

[node name="readyButton" type="TextureButton" parent="BackgroundElements/PickableButtonController"]
texture_filter = 1
offset_left = 609.0
offset_top = -523.0
offset_right = 933.0
offset_bottom = -360.0
texture_normal = ExtResource("5_msxm0")
stretch_mode = 0

[node name="BackgroundPicker" type="OptionButton" parent="BackgroundElements/PickableButtonController"]
offset_left = 813.0
offset_top = -352.0
offset_right = 932.0
offset_bottom = -260.0
item_count = 3
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="AssetAdder" type="MenuButton" parent="BackgroundElements/PickableButtonController"]
texture_filter = 1
offset_left = 604.0
offset_top = -83.0
offset_right = 937.0
offset_bottom = 93.0
icon = ExtResource("7_4ex03")
expand_icon = true
item_count = 4
popup/item_0/text = "Table"
popup/item_0/icon = ExtResource("7_gu7qr")
popup/item_0/id = 0
popup/item_1/text = "Painting1"
popup/item_1/icon = ExtResource("9_kkuf1")
popup/item_1/id = 1
popup/item_2/text = "Painting2"
popup/item_2/icon = ExtResource("10_n8xoa")
popup/item_2/id = 2
popup/item_3/text = "Apple"
popup/item_3/icon = ExtResource("13_f7crs")
popup/item_3/id = 3

[node name="CharacterAdder" type="MenuButton" parent="BackgroundElements/PickableButtonController"]
texture_filter = 1
texture_repeat = 1
offset_left = 604.0
offset_top = -255.0
offset_right = 937.0
offset_bottom = -79.0
icon = ExtResource("6_pef5q")
expand_icon = true
item_count = 9
popup/item_0/text = "Einstein"
popup/item_0/icon = ExtResource("3_211by")
popup/item_0/id = 0
popup/item_1/text = "Newton"
popup/item_1/icon = ExtResource("4_4q8rt")
popup/item_1/id = 1
popup/item_2/text = "Shakespeare"
popup/item_2/icon = ExtResource("9_2jysb")
popup/item_2/id = 2
popup/item_3/text = "Eminescu"
popup/item_3/icon = ExtResource("13_aq31n")
popup/item_3/id = 3
popup/item_4/text = "B. Franklin"
popup/item_4/icon = ExtResource("14_wsc0m")
popup/item_4/id = 4
popup/item_5/text = "Ion Creanga"
popup/item_5/icon = ExtResource("17_golnr")
popup/item_5/id = 5
popup/item_6/text = "Ion Ghica"
popup/item_6/icon = ExtResource("18_78i83")
popup/item_6/id = 6
popup/item_7/text = "Neil Armstrong"
popup/item_7/icon = ExtResource("19_trrm7")
popup/item_7/id = 7
popup/item_8/text = "Japanese Man"
popup/item_8/icon = ExtResource("22_q1t0v")
popup/item_8/id = 8

[node name="SceneChooser" type="OptionButton" parent="BackgroundElements/PickableButtonController"]
offset_left = 135.0
offset_top = 366.0
offset_right = 245.0
offset_bottom = 399.0
item_count = 1
popup/item_0/text = "1"
popup/item_0/id = 0

[node name="AddNewScene" type="TextureButton" parent="BackgroundElements/PickableButtonController"]
offset_left = 256.0
offset_top = 362.0
offset_right = 384.0
offset_bottom = 490.0
texture_normal = ExtResource("20_5kmlp")

[node name="AnimationDuration" type="TextEdit" parent="BackgroundElements/PickableButtonController"]
offset_left = 387.0
offset_top = 363.0
offset_right = 553.0
offset_bottom = 487.0
placeholder_text = "How long will it last?"

[node name="Exit" type="TextureButton" parent="BackgroundElements/PickableButtonController"]
texture_filter = 1
offset_left = -519.0
offset_top = 358.0
offset_right = -459.0
offset_bottom = 424.0
scale = Vector2(2, 2)
texture_normal = ExtResource("25_ssbba")

[node name="Scenes" type="Node2D" parent="."]
position = Vector2(-192, -108)
scale = Vector2(0.8, 0.8)

[node name="AnimationScene" type="Node2D" parent="Scenes"]

[node name="GUI" type="Node2D" parent="Scenes/AnimationScene"]

[node name="Background" type="Sprite2D" parent="Scenes/AnimationScene/GUI"]
texture_filter = 1
texture = ExtResource("5_f8olp")

[node name="Characters" type="Node2D" parent="Scenes/AnimationScene"]
z_index = 1

[node name="Assets" type="Node2D" parent="Scenes/AnimationScene"]

[node name="WorldBoundary" type="StaticBody2D" parent="Scenes/AnimationScene"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenes/AnimationScene/WorldBoundary"]
scale = Vector2(10, 10)
shape = SubResource("WorldBoundaryShape2D_d5ffx")

[connection signal="pressed" from="BackgroundElements/PickableButtonController/KILLSWITCH" to="BackgroundElements/PickableButtonController" method="_on_killswitch_pressed"]
[connection signal="pressed" from="BackgroundElements/PickableButtonController/readyButton" to="BackgroundElements/PickableButtonController" method="_on_ready_button_pressed"]
[connection signal="item_selected" from="BackgroundElements/PickableButtonController/BackgroundPicker" to="BackgroundElements/PickableButtonController" method="_on_background_picker_item_selected"]
[connection signal="item_selected" from="BackgroundElements/PickableButtonController/SceneChooser" to="BackgroundElements/PickableButtonController" method="_on_scene_chooser_item_selected"]
[connection signal="pressed" from="BackgroundElements/PickableButtonController/AddNewScene" to="BackgroundElements/PickableButtonController" method="addScene"]
[connection signal="pressed" from="BackgroundElements/PickableButtonController/Exit" to="BackgroundElements/PickableButtonController" method="_on_exit_pressed"]
